# openfga-dsl-parser

./: Cargo.toml  README.md
.github/workflows/: CI.yml  publish.yml
crates/ast/src/: lib.rs
crates/json/: Cargo.toml
crates/json/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  token.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
src/: lib.rs  main.rs
src/ast/: mod.rs
src/json/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
tests/: json_serialization.rs
