[package]
name = "openfga-dsl-parser"
authors = ["Max Mindlin <maxmindlin@gmail.com>"]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Parsing and JSON transformer for the OpenFGA authorization DSL"
readme = "README.md"
repository = "https://github.com/maxmindlin/openfga-dsl-parser"
keywords = ["parser", "openfga", "dsl", "json", "transformer"]

[dependencies]
serde_json = "1.0"
